src/types/tests/snapshots/tgbot__types__tests__background__background_fill-2.snap
---
source: src/types/tests/background.rs
expression: "BackgroundFill::Gradient\n{ bottom_color: 1, rotation_angle: 90, top_color: 2, }"
---
{
  "type": "gradient",
  "bottom_color": 1,
  "rotation_angle": 90,
  "top_color": 2
}
