src/types/tests/snapshots/tgbot__types__tests__background__background_fill-3.snap
---
source: src/types/tests/background.rs
expression: "BackgroundFill::Solid { color: 1 }"
---
{
  "type": "solid",
  "color": 1
}
