src/types/tests/snapshots/tgbot__types__tests__background__background_fill.snap
---
source: src/types/tests/background.rs
expression: "BackgroundFill::FreeformGradient { colors: vec![1, 2, 3] }"
---
{
  "type": "freeform_gradient",
  "colors": [
    1,
    2,
    3
  ]
}
