src/types/tests/snapshots/tgbot__types__tests__background__background_type-2.snap
---
source: src/types/tests/background.rs
expression: "BackgroundType::Fill\n{ dark_theme_dimming: 4, fill: BackgroundFill::Solid { color: 1 }, }"
---
{
  "type": "fill",
  "dark_theme_dimming": 4,
  "fill": {
    "type": "solid",
    "color": 1
  }
}
