src/types/tests/snapshots/tgbot__types__tests__background__background_type-4.snap
---
source: src/types/tests/background.rs
expression: "BackgroundType::Pattern\n{\n    document: Document::new(\"file-id\", \"file-unique-id\"), fill:\n    BackgroundFill::Solid { color: 1 }, intensity: 0, is_inverted: Some(true),\n    is_moving: Some(false),\n}"
---
{
  "type": "pattern",
  "document": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id"
  },
  "fill": {
    "type": "solid",
    "color": 1
  },
  "intensity": 0,
  "is_inverted": true,
  "is_moving": false
}
