src/types/tests/snapshots/tgbot__types__tests__background__background_type-5.snap
---
source: src/types/tests/background.rs
expression: "BackgroundType::Wallpaper\n{\n    dark_theme_dimming: 100, document:\n    Document::new(\"file-id\", \"file-unique-id\"), is_blurred: None, is_moving:\n    None,\n}"
---
{
  "type": "wallpaper",
  "dark_theme_dimming": 100,
  "document": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id"
  }
}
