src/types/tests/snapshots/tgbot__types__tests__background__background_type.snap
---
source: src/types/tests/background.rs
expression: "BackgroundType::ChatTheme { theme_name: String::from(\"test\"), }"
---
{
  "type": "chat_theme",
  "theme_name": "test"
}
